# lingmo-sdk-system

./: .gitignore  CMakeLists.txt
debian/: changelog  control  copyright  lingmo-sdk-disk-dev.install  lingmo-sdk-disk.install  lingmo-sdk-filesystem-dev.install  lingmo-sdk-filesystem.install  lingmo-sdk-hardware-dev.install  lingmo-sdk-hardware.install  lingmo-sdk-location-dev.install  lingmo-sdk-location.install  lingmo-sdk-location.postinst  lingmo-sdk-logrotate.install  lingmo-sdk-logrotate.postinst  lingmo-sdk-net-dev.install  lingmo-sdk-net.install  lingmo-sdk-ocr-dev.install  lingmo-sdk-ocr.install  lingmo-sdk-package-dev.install  lingmo-sdk-package.install  lingmo-sdk-powermanagement-dev.install  lingmo-sdk-powermanagement.install  lingmo-sdk-proc-dev.install  (+17 more)
src/: CMakeLists.txt
src/disk/: CMakeLists.txt  diskmarcos.h  libkydiskinfo.c  libkydiskinfo.h
src/disk/test/: Makefile  getdiskinfo.c  getdisklist.c
src/filesystem/filewatcher/: CMakeLists.txt  libkyfilewatcher.cpp  libkyfilewatcher.hpp  libkyfilewatcher_global.hpp
src/filesystem/filewatcher/test/: kyfilewatcher-test.cpp
src/hardware/: CMakeLists.txt  libkybios.c  libkybios.h  libkybluetooth.c  libkybluetooth.h  libkyboard.c  libkyboard.h  libkycpu.c  libkycpu.h  libkydisplay.c  libkydisplay.h  libkyedid.c  libkyedid.h  libkyfan.c  libkyfan.h  libkyhw.c  libkyhw.h  libkync.c  libkync.h  libkyprinter.c  libkyprinter.h  libkytouchscreen.h  libkyusb.c  libkyusb.h
src/hardware/test/: kybios-test.c  kybluetooth-test.c  kyboard-test.c  kycpu-test.c  kydisplay-test.c  kyedid-test.c  kyfan-test.c  kyhw-test.c  kync-test.c  kyprinterlist-test.c  kyprinterprint-test.c  kyusb-test.c
src/kdkocr/: CMakeLists.txt  libkyocr.cpp  libkyocr.hpp  ocr_main.cpp  ocr_main.h  postprocess_op.cpp  postprocess_op.h  preprocess_op.cpp  utility.cpp  utility.h
src/kysdk-java/kysdk-java-ext/: pom.xml
src/kysdk-java/kysdk-java-ext/kysdk-java/: pom.xml
src/kysdk-java/kysdk-java-ext/kysdk-java/src/main/java/com/lingmo/kysdk/: bios.java  cpuinfo.java  disk.java  gps.java  mainboard.java  net.java  netcard.java  packageinfo.java  peripheralsenum.java  print.java  process.java  resolution.java  resource.java  runinfo.java  sysinfo.java
src/kysdk-java/kysdk-java-ext/kysdk-java/src/main/java/lingmo/kysdk/java/client/: DBusClient.java
src/kysdk-java/kysdk-java-ext/kysdk-java/src/main/java/lingmo/kysdk/java/method/: BiosMethod.java  CpuMethod.java  DiskMethod.java  GpsMethod.java  MainBoardMethod.java  NetCardMethod.java  NetMethod.java  PackageInfoMethod.java  PeripheralsenumMethod.java  PrintMethod.java  ProcessMethod.java  ResourceMethod.java  RunInfoMethod.java  SysInfoMethod.java
src/kysdk-java/kysdk-java-ext/kysdk-java/src/test/java/lingmo/kysdk/java/: EventTest.java
src/kysdk-java/kysdk-java-ext/package/: build.sh
src/kysdk-java/test/src/main/java/org/example/: Main.java
src/kysdkdbus/: CMakeLists.txt  com.lingmo.kysdk.service.conf  kySdkDbus.pro  kysdk-dbus-session.desktop  kysdk-dbus.service  kysdkdbus.cpp  kysdkdbus.h  kysdkrest.cpp  kysdkrest.h  main.cpp  main_rest.cpp
src/lingmo-sdk-system-javascript-http/: CMakeLists.txt  httpServer  main.cpp
src/lingmo-sdk-system-javascript-http/conf/: kysdk.conf  kysdkHttpServer.desktop  kysdkHttpServer.service
src/lingmo-sdk-system-javascript-http/html/js/: service.js  shieldshortcut.js
src/lingmo-sdk-system-javascript-http/kysdk/: bios.cpp  bios.h  cpuinfo.cpp  cpuinfo.h  customerevent.cpp  customerevent.h  dependence.cpp  dependence.h  disk.cpp  disk.h  gps.cpp  gps.h  kysdkdbus.cpp  kysdkdbus.h  mainboard.cpp  mainboard.h  net.cpp  net.h  netcard.cpp  netcard.h  netlink.cpp  netlink.h  packageinfo.cpp  packageinfo.h  peripheralsenum.cpp  peripheralsenum.h  printer.cpp  printer.h  process.cpp  process.h  resolutionctl.cpp  resolutionctl.h  resource.cpp  resource.h  runinfo.cpp  runinfo.h  sysinfo.cpp  sysinfo.h  widget.cpp  widget.h
src/lingmo-sdk-system-javascript-websocket/: CMakeLists.txt  kysdk-dbus-websocket.desktop  kysdk-dbus-websocket.pro  main.cpp  readme.md
src/lingmo-sdk-system-javascript-websocket/html/css/: select.css  style.css
src/lingmo-sdk-system-javascript-websocket/html/js/: config-manager.js  kydevmonit.js  selfcheck.js  service.js
src/lingmo-sdk-system-javascript-websocket/kysdk/: LogHandler.cpp  bios.cpp  bios.h  cpuinfo.cpp  cpuinfo.h  dependence.cpp  dependence.h  disk.cpp  disk.h  gps.cpp  gps.h  kysdkdbus.cpp  kysdkdbus.h  mainboard.cpp  mainboard.h  net.cpp  net.h  netcard.cpp  netcard.h  netlink.cpp  netlink.h  packageinfo.cpp  packageinfo.h  peripheralsenum.cpp  peripheralsenum.h  print.cpp  print.h  process.cpp  process.h  resolutionctl.cpp  resolutionctl.h  resource.cpp  resource.h  runinfo.cpp  runinfo.h  sysinfo.cpp  sysinfo.h
src/location/: CMakeLists.txt  dbus_location.conf  dbus_location.service  libkylocation.c  libkylocation.h  location.py
src/location/test/: kylocation-test.c
src/logrotate/: CMakeLists.txt  com.kysdk.base.conf  kysdk-logrotate.service  logrotate.cpp  logrotate.h  logrotate.pro  main.cpp
src/logrotate/test/: kylogrotate-test.c
src/net/: CMakeLists.txt  libkynetinfo.c  libkynetinfo.h
src/net/test/: kynet-test.c
src/powermanagement/: CMakeLists.txt  libkylockscreen.cpp  libkylockscreen.h  lockscreen.cpp  lockscreen.h
src/powermanagement/test/testlockscreen/: CMakeLists.txt  main.c
src/proc/: CMakeLists.txt  libkyprocess.c  libkyprocess.h  libkyrtinfo.c  libkyrtinfo.h
src/proc/test/: kyprocess-test.c  kyrtinfo-test.c
src/python/: kysdk.py
src/python/test/: test.py
src/realtime/: CMakeLists.txt  libkyrealtimeinfo.c  libkyrealtimeinfo.cpp  libkyrealtimeinfo.h
src/realtime/test/: kyrealtime-test.c  realtimeinfo-test.cpp
src/systeminfo/: CMakeLists.txt  libkysysinfo.c  libkysysinfo.cpp  libkysysinfo.h  libkysysinfo.hpp
src/systeminfo/test/: kysysinfo_test.c
src/systemtime/: CMakeLists.txt  com.lingmo.kysdk.TimeServer.conf  date.c  kysdk-systime-date.desktop  kysdk-systime.service  libkydate.c  libkydate.h  m_systime.c  m_systime.h
src/systemtime/test/: kydate_test.c
(+24 files in other folders)
